--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "sequelize": "^6.31.1",
     "sequelize-cli": "^6.6.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
