--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.7",
+    "@types/cookie-parser": "^1.4.3",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "browserslist": "^4.21.5",
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "data-utils": "^0.0.2",
+    "dotenv": "^16.0.3",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "local-storage": "^2.0.0",
     "mysql2": "^3.3.0",
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
@@ -32,6 +38,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@mdi/font": "^7.2.96",
+    "@mdi/js": "^7.2.96",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
