--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,7 +2,7 @@
     "development": {
         "username": "root",
         "password": "jack9812",
-        "database": "react_back",
+        "database": "test_db",
         "host": "127.0.0.1",
         "dialect": "mysql"
       }
